--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "sass": "^1.61.0",
-    "styled-components": "^5.3.9"
+    "sass": "^1.61.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
