--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query-devtools": "^4.29.3",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "sass": "^1.61.0"
   },
