--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@tanstack/react-query-devtools": "^4.29.3",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
-    "sass": "^1.61.0"
+    "sass": "^1.61.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.28",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
