--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query-devtools": "^4.29.3",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "firebase": "^9.21.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
@@ -20,7 +21,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "sass": "^1.61.0",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
@@ -28,6 +29,7 @@
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
