--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-devtools": "^4.29.3",
+    "@types/react-redux": "^7.1.25",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "firebase": "^9.21.0",
@@ -19,7 +21,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "redux": "^4.2.1",
+    "redux-toolkit": "^1.1.2",
     "sass": "^1.61.0",
     "uuid": "^9.0.0"
   },
