--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-redux": "^7.1.25",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "compressorjs": "^1.2.1",
     "firebase": "^9.21.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.28",
+    "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
