--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.21.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.5",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
