--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -21,18 +21,22 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - name: Deploy to VPS
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:       
+    - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
         username: root
-        key: ${{ secrets.SSH_PASSWORD }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: |
-            rm -rf ~root/production/FE/dist
-            mkdir -p ~root/production/FE/dist
-            scp -r dist/* root@${{ secrets.SSH_HOST }}:~root/production/FE/dist
+           rm -rf ~root/production/FE/dist
+           mkdir -p ~root/production/FE/dist
+           scp -r dist/* root@${{ secrets.SSH_HOST }}:~root/production/FE/dist
               
-            cd production
-            sudo docker compose down 
-            sudo docker compose up -d
+           cd production
+           sudo docker compose down 
+           sudo docker compose up -d
