--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "handmad-admin",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/levi-vu/Neko-band-admin-FE"
+},
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,16 +13,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-devtools": "^4.29.3",
     "@types/react-redux": "^7.1.25",
     "antd": "^5.4.2",
+    "aws-amplify": "^5.3.11",
     "axios": "^1.3.5",
     "compressorjs": "^1.2.1",
     "firebase": "^9.21.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-auth-kit": "^2.12.5",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
